feat: 更改獲取用戶列表方法 (231106)
